bugs fixed - body-overflow

--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@ body {
   line-height: 18px;
   height: 100%;
   letter-spacing: 0.2px;
+  overflow: hidden;
 }
 
 /* =========== Login-main =========== */
